--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <nav>
                 <ul>
-                    <li><a href="fp.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="serices.html">Services</a></li>
                     <li><a href="conts.html">Contact</a></li>
