--- a/serices.html
+++ b/serices.html
@@ -12,7 +12,7 @@
         <div class="container">
             <nav>
                 <ul>
-                    <li><a href="fp.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="serices.html">Services</a></li>
                     <li><a href="conts.html">Contact</a></li>
