Website Final Project

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 
                     <div class="tab">
                         <p class="tablinks active-link" onclick="opentab('skills')">Skills</p>
-                        <p class="tablinks" onclick="opentab('education')">Eucation</p>
+                        <p class="tablinks" onclick="opentab('education')">Education</p>
                     </div>
                     <div class="tabcontents active-tab" id="skills">
                         <ul>
